# stdash

./: 1  @1  Dockerfile  pyproject.toml  requirements.txt
note/: Untitled.ipynb
src/stdash/: app.py
src/stdash/pages/: page_2.py  page_3.py
